--- a/src/components/widgets/LapDeltaWidget/LapDeltaWidget.module.scss
+++ b/src/components/widgets/LapDeltaWidget/LapDeltaWidget.module.scss
@@ -1,6 +1,7 @@
 @use '../../../styles/variables' as *;
 
 .delta {
+  min-width: 8ch;
   text-align: center;
   font-family: $font-widget;
   font-weight: 700;
