--- a/src/components/widgets/primitives/WidgetPanel/WidgetPanel.module.scss
+++ b/src/components/widgets/primitives/WidgetPanel/WidgetPanel.module.scss
@@ -13,3 +13,8 @@
   height: max-content;
   overflow: visible;
 }
+
+.fitHeight {
+  height: max-content;
+  overflow-y: visible;
+}
